<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/close_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/temu_mobile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="3.3dp"
                android:src="@drawable/lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:text="@string/all_data_is_encrypted"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/shipping" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/free_shipping"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/on_all_orders"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/return_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/free_returns"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/up_to_90_days"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:drawableStart="@drawable/google"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="70dp"
                android:paddingVertical="14dp"
                android:text="@string/continue_with_google"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/google"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="70dp"
                android:paddingVertical="14dp"
                android:strokeColor="@color/black"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/white"

                android:gravity="start|center_vertical"
                android:icon="@drawable/email"
                android:paddingHorizontal="70dp"
                android:paddingVertical="14dp"
                android:strokeColor="@color/black"
                android:text="@string/continue_with_email"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/white"
                android:gravity="start|center_vertical"
                android:icon="@drawable/phone"
                android:paddingHorizontal="70dp"
                android:paddingVertical="14dp"
                android:strokeColor="@color/black"
                android:text="@string/continue_with_phone_number"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/white"

                android:gravity="start|center_vertical"
                android:icon="@drawable/twitter"
                android:paddingHorizontal="70dp"
                android:paddingVertical="14dp"
                android:strokeColor="@color/black"
                android:text="@string/continue_with_x"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:strokeWidth="1dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/trouble_signing_in"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/terms_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/by_continuing_you_agree_to_our_terms_of_use_and_privacy_n_policy"
            android:textColor="@color/fadeBlack" />
    </LinearLayout>

</LinearLayout>
